Intento de hacer el juego, no se pasa correctament los protocolos
Signed-off-by: Eloi Salles <oinu69@gmail.com>

--- a/Practia1/Server/Server.vcxproj
+++ b/Practia1/Server/Server.vcxproj
@@ -119,7 +119,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\Client\Game.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\Client\Game.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
